Drop blog and Instagram

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
-                    <li><a title="Blog" href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
-                    <li><a title="Instagram" href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -75,9 +73,6 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#experiences">Experiences</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#arts">Arts</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -107,18 +102,6 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">Who I am</h3>
-                </div>
-                <div class="col-sm-4 col-sm-offset-4">
-                    <div class="team-member">
-                        <img src="img/profile.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Ken Hu</h4>
-                        <p class="text-muted"></p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
-                            <li><a href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
-                            <li><a href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
             <div class="row">
@@ -396,33 +379,12 @@
         </div>
     </section>
 
-    <!-- Arts Section -->
-    <section id="arts" class="bg-darkest-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading heading-inverted">Arts</h2>
-                    <h3 class="section-subheading heading-inverted">I am also an illustrator, publishing as <a href="https://www.instagram.com/baconillustrated/">Bacon Illustrated</a></h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <!-- SnapWidget -->
-                    <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                    <iframe src="https://snapwidget.com/embed/code/201102" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Socal Aside -->
     <aside id="social">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a class="btn btn-lg" href="https://github.com/whosken/" title="Github"><i class="fa fa-github fa-2x"></i></a>
-                    <a class="btn btn-lg" href="https://medium.com/@whosbacon" title="Medium"><i class="fa fa-medium fa-2x"></i></a>
-                    <a class="btn btn-lg" href="https://www.instagram.com/baconillustrated/" title="Instagram"><i class="fa fa-instagram fa-2x"></i></a>
                     <a class="btn btn-lg" href="mailto:whosbacon@gmail.com" title="Email"><i class="fa fa-envelope fa-2x"></i></a>
                 </div>
             </div>
@@ -435,7 +397,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading heading-inverted">Contact</h2>
-                    <h3 class="section-subheading heading-inverted">Let's work togther!</h3>
+                    <h3 class="section-subheading heading-inverted">Let's connect!</h3>
                 </div>
             </div>
             <div class="row">
