Add blog and illustrations

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 <ul class="nav navbar-nav">
                     <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
+                    <li><a title="Blog" href="https://medium.com/@whosbacon/"><i class="fa fa-pencil"></i></a></li>
+                    <li><a title="Illustrations" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paint-brush"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
