--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
+                                        <li>Lead a team of data analysts, scientists, and engineers</li>
+                                        <li>Collaborated with product team to determine minimum viable solutions to complex problems</li>
+                                        <li>Designed and prototyped machine learning solutions for job recommendation</li>
+                                        <li>Automated data pipeline for email digests</li>
                                         <li>Developed methods to tailor relevant newsfeed contents</li>
                                         <li>Expanded capabilities of comparative experiments</li>
                                     </ul>
@@ -215,7 +219,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><br />2017-2018</h4>
+                                <h4><br />2016-18</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -233,7 +237,7 @@
                         </li>
                         <li class="timeline">
                             <div class="timeline-image">
-                                <h4><br />2016-2017</h4>
+                                <h4><br />2015-16</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
