--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
                 <ul class="nav navbar-nav">
                     <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
-                    <li><a title="Blog" href="https://medium.com/@whosbacon/"><i class="fa fa-pencil"></i></a></li>
-                    <li><a title="Illustrations" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paint-brush"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -90,9 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Sometimes I travel; sometimes I draw; sometimes I write</div>
-                <div class="intro-lead-in">Most times I code</div>
-                <div class="intro-heading">Data Scientist / Engineer</div>
+                <div class="intro-lead-in">Something, something, something technology</div>
+                <div class="intro-heading">Data Scientist + Engineer</div>
             </div>
         </div>
     </header>
@@ -386,7 +383,7 @@
     </section>
     
     <!-- Contact Section -->
-    <section id="contact">
+    <!--<section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -401,7 +398,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <footer>
         <div class="container">
