Use duck mail and update experience description

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Something, something, something technology</div>
-                <div class="intro-heading">Data Scientist + Engineer</div>
+                <div class="intro-lead-in">Somewhere between data science and data engineering</div>
+                <div class="intro-heading">Machine Learning Engineer</div>
             </div>
         </div>
     </header>
@@ -105,7 +105,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <p class="text-muted">I'm a data engineer-turned-scientist. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
+                    <p class="text-muted">I'm a machine learning engineer. My professional experiences range across data engineering, microservices, search engines, natural language processing, and machine learning. My weapon of choice is Python.</p>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Some cool projects I've worked / am working on</h3>
+                    <h3 class="section-subheading text-muted">Some cool projects I've worked on</h3>
                 </div>
             </div>
             <div class="row">
@@ -192,10 +192,10 @@
                                     <ul class="text-muted">
                                         <li>Lead a team of data analysts, scientists, and engineers</li>
                                         <li>Collaborated with product team to determine minimum viable solutions to complex problems</li>
-                                        <li>Designed and prototyped machine learning solutions for job recommendation</li>
-                                        <li>Automated data pipeline for email digests</li>
-                                        <li>Developed methods to tailor relevant newsfeed contents</li>
-                                        <li>Expanded capabilities of comparative experiments</li>
+                                        <li>Designed, prototyped, and developed machine learning solutions for jobs and ads recommendation</li>
+                                        <li>Designed and implemented an agile process for machine learning projects</li>
+                                        <li>Automated data pipeline for email digests and newsfeed contents</li>
+                                        <li>Developed department-wide framework for configuring content feeds</li>
                                     </ul>
                                 </div>
                             </div>
@@ -380,7 +380,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
                     <p>Please don't hesitate to reach out if you have any enquiries!</p>
-                    <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
+                    <p><a class="btn btn-primary" href="mailto:whosken@duck.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
                 </div>
             </div>
         </div>
