--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sometimes I travel; sometimes I draw; sometimes I write; most times I code">
+    <meta name="description" content="Somewhere between data science and data engineering">
     <meta name="author" content="Ken Hu">
 
-    <title>Ken Hu: Data Scientist / Engineer</title>
+    <title>Ken Hu: Machine Learning Engineer</title>
     
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
