--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <p class="text-muted">I'm a machine learning engineer. My professional experiences range across data engineering, microservices, search engines, natural language processing, and machine learning. My weapon of choice is Python.</p>
+                    <p class="text-muted">I'm a data-turned-machine-learning engineer. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.
+
+</p>
                 </div>
             </div>
         </div>
@@ -117,7 +119,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Some cool projects I've worked on</h3>
+                    <h3 class="section-subheading text-muted">Some projects I've worked on</h3>
                 </div>
             </div>
             <div class="row">
@@ -179,24 +181,35 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li class="timeline">
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><br />2018-</h4>
+                                <h4><br />2018-2023</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4><a href="https://www.doximity.com/" target="_blank">Doximity</a></h4>
-                                    <h4 class="subheading">Machine Learning Engineer</h4>
+                                    <h4 class="subheading">Senior Machine Learning Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
-                                        <li>Lead a team of data analysts, scientists, and engineers</li>
-                                        <li>Collaborated with product team to determine minimum viable solutions to complex problems</li>
+                                        <li>Lead teams of data analysts, scientists, and engineers</li>
+                                        <li>Collaborated with product team to determine minimum viable solutions and long-term visions</li>
                                         <li>Designed, prototyped, and developed machine learning solutions for jobs and ads recommendation</li>
-                                        <li>Designed and implemented an agile process for machine learning projects</li>
-                                        <li>Automated data pipeline for email digests and newsfeed contents</li>
+                                        <li>Designed and implemented an <a href="https://builtin.com/machine-learning/agile-machine-learning-development" target="_blank">agile process</a> for machine learning projects</li>
+                                        <li>Automated data pipelines for email digests, newsfeed articles, and platform-wide ad contents</li>
                                         <li>Developed department-wide framework for configuring content feeds</li>
                                     </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline">
+                            <div class="timeline-image">
+                                <h4><br />2019-22</h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>The New School for Social Research</h4>
+                                    <h4 class="subheading">MA, Liberal Studies</h4>
                                 </div>
                             </div>
                         </li>
