--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Somewhere between data science and data engineering</div>
-                <div class="intro-heading">Machine Learning Engineer</div>
+                <div class="intro-lead-in">A journey from ETL to ML</div>
+                <div class="intro-heading">ML + DE Consultant</div>
             </div>
         </div>
     </header>
@@ -105,9 +105,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <p class="text-muted">I'm a data-turned-machine-learning engineer. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.
-
-</p>
+                    <p class="text-muted">I'm a machine learning + data engineering consultant. My professional experiences range across data engineering, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
                 </div>
             </div>
         </div>
@@ -181,6 +179,24 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline">
+                            <div class="timeline-image">
+                                <h4><br />2023-</h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4><a href="https://www.doximity.com/" target="_blank">Doximity</a></h4>
+                                    <h4 class="subheading">Machine Learning + Data Engineering Consultant</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-muted">
+                                        <li>Review, design, and develop historical and forward-looking KPI monitors</li>
+                                        <li>Review and design machine learning experiments</li>
+                                        <li>Guide junior colleagues to execute machine learning projects</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4><br />2018-2023</h4>
