--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
-                    <li><a title="Tech" href="tech"><i class="fa fa-archive"></i></a></li>
+                    <li><a title="Tech" href="tech"><i class="fa fa-wifi"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -191,13 +191,14 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4><a href="https://www.doximity.com/" target="_blank">Doximity</a></h4>
-                                    <h4 class="subheading">Senior Machine Learning Engineer</h4>
+                                    <h4>Data Science and Engineering</h4>
+                                    <h4 class="subheading">Senior Machine Learning Engineer, Independent Consultant</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
+                                        <li>Review and design machine learning experiments</li>
                                         <li>Lead teams of data analysts, scientists, and engineers</li>
-                                        <li>Designed and implemented an <a href="https://builtin.com/machine-learning/agile-machine-learning-development" target="_blank">agile process</a> for machine learning projects</li>
+                                        <li>Designed an original <a href="https://builtin.com/machine-learning/agile-machine-learning-development" target="_blank">development process</a> for commerical machine learning</li>
                                     </ul>
                                 </div>
                             </div>
@@ -240,7 +241,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
-                                        <li>Developed proprietary natural language processing and machine learning engine for analyzing the Chinese language in Python</li>
+                                        <li>Developed proprietary natural language processing and machine learning engine for analyzing the Chinese language</li>
                                         <li>Represented the team in conferences and media</li>
                                     </ul>
                                 </div>
