--- a/tech.html
+++ b/tech.html
@@ -81,6 +81,16 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in"></div>
+                <div class="intro-heading"></div>
+            </div>
+        </div>
+    </header>
+
     <!-- About Section -->
     <section id="about" class="bg-light-gray">
         <div class="container">
