update title card

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Philosophy of Language and Theory of Mind</div>
-                <div class="intro-heading">Ken Hu, Independent Researcher</div>
+                <div class="intro-lead-in">Ken Hu, independent researcher</div>
+                <div class="intro-heading">Thinking about language</div>
             </div>
         </div>
     </header>
