--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
-                    <li><a title="Tech" href="tech"><i class="fa fa-wifi"></i></a></li>
+                    <li><a title="Tech" href="tech"><i class="fa fa-server"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -131,7 +131,7 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <!--<img src="img/reversedict.jpg" class="img-responsive" alt="">-->
+                        <i class="fa fa-rss img-responsive" aria-hidden="true"></i>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
