test icon image

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <i class="fa fa-rss img-responsive" aria-hidden="true"></i>
+                        <i class="fa fa-pencil fa-6 img-responsive" aria-hidden="true"></i>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
-                        <p class="text-muted">Contributions to NSSR's public discourse platform</p>
+                        <p class="text-muted">Contributions to the NSSR public discourse platform</p>
                     </div>
                 </div>
                 <!--
