--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <i class="fa fa-pencil fa-6 img-responsive" aria-hidden="true"></i>
+                        <i class="fa fa-pencil fa-3x img-responsive"></i>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
