test icon image

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <i class="fa fa-pencil fa-3x img-responsive"></i>
+                        <div class="portfolio-icon">
+                            <i class="fa fa-pencil fa-6x"></i>
+                        </div>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
