test css change

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-6 col-md-offset-4 portfolio-item">
                     <a href="https://publicseminar.org/author/khu/" class="portfolio-link">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="portfolio-icon">
-                            <i class="fa fa-pencil fa-6x"></i>
+                            <i class="fa fa-pencil fa-3x"></i>
                         </div>
                     </a>
                     <div class="portfolio-caption">
