Revert "test icon image"
This reverts commit 736dce2164d2a148fdc834cb06377b904cfb6d2e.

--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <div class="portfolio-icon">
-                            <i class="fa fa-pencil fa-6x"></i>
-                        </div>
+                        <i class="fa fa-pencil fa-3x img-responsive"></i>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
