--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <i class="fa fa-external-link fa-3x"></i>
                             </div>
                         </div>
-                        <!--<img src="img/reversedict.jpg" class="img-responsive" alt="">-->
+                        <img src="img/pencil.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Public Seminar</h4>
@@ -146,7 +146,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/decisive.jpg" class="img-responsive" alt="">
+                        <img src="img/pencil.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Publication</h4>
