--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-muted">Since transitioning to philosophy, my interests have been on the philosophy of language and theory of mind. I receieved my MA at <a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a> in Liberal Studies, with a focus on interdisciplinary concepts of language and phenomenology. I also have a soft spot for animal ethics, immigrant rights, and Shakespeare.</p>
+                    <p class="text-muted">I am an independent researcher, with interests in the philosophy of language and theory of mind. I receieved my MA at <a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a> in Liberal Studies, with a focus on interdisciplinary understandings of language and phenomenology. I also have a soft spot for animal ethics, immigrant rights, and Shakespeare.</p>
                 </div>
                 <div class="col-md-6">
                     <p class="text-muted">In a <a href="/tech">previous</a> life, I was a data scientist and engineer. I initially received a BSc in Information Sciences and Technology from <a href="https://www.ist.psu.edu/" target="_blank">Pennsyania State University</a>, then my MSc in Artificial Intelligence at the <a href="https://informatics.ed.ac.uk/" target="_blank">University of Edinburgh</a>. As a part of that career, I've also founded a startup specializing in <a href="https://vimeo.com/53933443" target="_blank">natural language processing</a> in the Chinese language.</p>
@@ -180,8 +180,6 @@
                                     <h4 class="subheading">Independent Researcher</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <ul class="text-muted">
-                                    </ul>
                                 </div>
                             </div>
                         </li>
@@ -211,9 +209,11 @@
                                 <div class="timeline-heading">
                                     <h4><a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a></h4>
                                     <h4 class="subheading">MA, Liberal Studies</h4>
-                                    <ul class="text-muted">
-                                        <li>Contributions to NSSR online discourse platform <a href="https://publicseminar.org/" target="_blank">Public Seminar</a></li>
-                                    </ul>
+                                    <div class="timeline-body">
+                                        <ul class="text-muted">
+                                            <li>Contributions to NSSR online discourse platform <a href="https://publicseminar.org/" target="_blank">Public Seminar</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
-                                        <li>Developed proprietary natural language processing and machine learning engine for analyzing the Chinese language</li>
+                                        <li>Developed proprietary machine learning engine for analyzing the Chinese language</li>
                                         <li>Represented the team in conferences and media</li>
                                     </ul>
                                 </div>
@@ -285,6 +285,8 @@
                                 <div class="timeline-heading">
                                     <h4><a href="https://www.ist.psu.edu/" target="_blank">Pennsylvania State University, University Park</a></h4>
                                     <h4 class="subheading">BSc, Information Science and Techology, Design and Development</h4>
+                                </div>
+                                <div class="timeline-body">
                                 </div>
                             </div>
                         </li>
