fix tech page icon

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
-                    <li><a title="Tech" href="tech"><i class="fa fa-wifi"></i></a></li>
+                    <li><a title="Tech" href="tech"><i class="fa fa-server"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
