update humanities profile

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
                     <li><a title="Tech" href="tech"><i class="fa fa-server"></i></a></li>
+                    <li><a title="Tech" target="_blank" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paintbrush"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -72,7 +72,7 @@
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#experiences">Experiences</a>
+                        <a class="page-scroll" href="#cv">CV</a>
                     </li>
                     <!--<li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -88,8 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Ken Hu, independent researcher</div>
-                <div class="intro-heading">Thinking about language</div>
+                <div class="intro-lead-in">Peiken "Ken" Hu</div>
+                <div class="intro-heading">Language and Mind</div>
             </div>
         </div>
     </header>
@@ -105,7 +105,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-muted">I am an independent researcher, with interests in the philosophy of language and theory of mind. I receieved my MA at <a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a> in Liberal Studies, with a focus on interdisciplinary understandings of language and phenomenology. I also have a soft spot for animal ethics, immigrant rights, and Shakespeare.</p>
+                    <p class="text-muted">I am an independent researcher, with interests in the philosophy of language and theory of mind. I receieved my MA at <a href="https://www.newschool.edu/nssr/" target="_blank">The New School for Social Research</a> in Liberal Studies, with a focus on interdisciplinary understandings of language. I also have a soft spot for phenomenology, animal ethics, and Shakespeare.</p>
                 </div>
                 <div class="col-md-6">
                     <p class="text-muted">In a <a href="/tech">previous</a> life, I was a data scientist and engineer. I initially received a BSc in Information Sciences and Technology from <a href="https://www.ist.psu.edu/" target="_blank">Pennsyania State University</a>, then my MSc in Artificial Intelligence at the <a href="https://informatics.ed.ac.uk/" target="_blank">University of Edinburgh</a>. As a part of that career, I've also founded a startup specializing in <a href="https://vimeo.com/53933443" target="_blank">natural language processing</a> in the Chinese language.</p>
@@ -158,13 +158,12 @@
         </div>
     </section>
 
-    <!-- Experiences Section -->
-    <section id="experiences">
+    <!-- CV Section -->
+    <section id="cv">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Experiences</h2>
-                    <h3 class="section-subheading text-muted">A printer-friendly <a href="/cv" title="résumé" target="_blank">CV</a></h3>
+                    <h2 class="section-heading">CV</h2>
                 </div>
             </div>
             <div class="row">
@@ -172,7 +171,7 @@
                     <ul class="timeline">
                         <li class="timeline">
                             <div class="timeline-image">
-                                <h4><br />2024-</h4>
+                                <h4><br />2025-</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -185,7 +184,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><br />2018-2023</h4>
+                                <h4><br />2018-2024</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
