--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a title="Tech" href="tech"><i class="fa fa-server"></i></a></li>
-                    <li><a title="Tech" target="_blank" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paintbrush"></i></a></li>
+                    <li><a title="Tech" target="_blank" href="https://photos.app.goo.gl/MYSUr9NrvAabRbyWA"><i class="fa fa-paint-brush"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
